# tfmod

./: .gitignore  README.md  install.sh  justfile  pyproject.toml
modules/command-help/: help.sh  main.tf  outputs.tf  variables.tf  versions.tf
modules/entrypoint/: backend.tf  main.tf
modules/init/: backend.tf  main.tf  outputs.tf  variables.tf
modules/init-command/: outputs.tf  variables.tf
modules/shell-snippet/: main.tf  outputs.tf  variables.tf
modules/spec/: outputs.tf  variables.tf
modules/tfmod/: .terraform.lock.hcl  backend.tf  main.tf  variables.tf
tests/: conftest.py  test_registry_api.py  test_validate_spec.py
tests/__snapshots__/: test_registry_api.ambr
tests/cassettes/test_registry_api/: test_download_url.yaml  test_get.yaml  test_latest.yaml  test_latest_download_url.yaml  test_latest_for_provider.yaml  test_list.yaml  test_list_namespace.yaml  test_metrics.yaml  test_search.yaml  test_versions.yaml
tests/fixtures/: full-module.tfvars  null-module.tfvars
tfmod/: __init__.py  __main__.py  action.py  cli.py  config.py  constants.py  entrypoint.sh.tftpl  error.py  gh.py  git.py  init.py  interrupts.py  main.py  module.py  plan.py  prelude.sh  process.py  spec.py  terraform.py  validate.py  vars.py  version.py  workflow.py
tfmod/api/: __init__.py
tfmod/cli/: __init__.py  base.py  main.py
tfmod/command/: __init__.py  base.py  main.sh  parse-args.sh  parse-args.sh.tftpl  publish.py  unwise.sh  update.sh
tfmod/io/: __init__.py  logging.sh  prompt.py  prompt.sh
tfmod/logging/: __init__.py
tfmod/publish/: __init__.py
tfmod/publish/resource/: default_branch.py  git.py  module.py  remote.py  repository.py  spec.py  user.py  version.py
tfmod/terraform/: __init__.py  value.py  variables.py  vars.py
